<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CanvasCoordinateActivity">

    <TextView
        android:id="@+id/txtInputX"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/input_a"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtX"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/numbera"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtInputX"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInputY"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/input_b"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputX" />

    <EditText
        android:id="@+id/edtY"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/numberb"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtInputY"
        app:layout_constraintTop_toBottomOf="@+id/edtX" />


    <Button
        android:id="@+id/btnChooseLineColor"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button_color"
        android:text="@string/liner_color"
        app:layout_constraintBottom_toTopOf="@+id/vectorView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtY"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/btnChooseRowColor"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_button_color"
        android:text="@string/axis_color"
        app:layout_constraintBottom_toTopOf="@+id/vectorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtY" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/draw"
        app:layout_constraintBottom_toTopOf="@+id/vectorView"
        app:layout_constraintEnd_toStartOf="@+id/btnChooseRowColor"
        app:layout_constraintStart_toEndOf="@+id/btnChooseLineColor"
        app:layout_constraintTop_toBottomOf="@+id/edtY" />

    <com.kn.canvascoordinate.CanvasView
        android:id="@+id/vectorView"
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:setLineColor="#FFFF0000"
        app:setRowColor="#FFFF0000" />

</androidx.constraintlayout.widget.ConstraintLayout>